RESOLVED FIXED307112
[iOS] Visibility is not propagated to iframe processes
https://bugs.webkit.org/show_bug.cgi?id=307112
Summary [iOS] Visibility is not propagated to iframe processes
Per Arne Vollan
Reported 2026-02-05 15:34:39 PST
Visibility is not propagated to iframe processes on iOS.
Attachments
Radar WebKit Bug Importer
Comment 1 2026-02-05 15:34:48 PST
Per Arne Vollan
Comment 2 2026-02-05 15:43:37 PST
EWS
Comment 3 2026-02-09 05:53:49 PST
Committed 307072@main (2d935edf3a14): <https://commits.webkit.org/307072@main> Reviewed commits have been landed. Closing PR #58004 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.