[iOS] Visibility is not propagated to iframe processes https://bugs.webkit.org/show_bug.cgi?id=307112 rdar://169747327

Reviewed by Basuke Suzuki.

When ExtensionKit is enabled (iOS), make sure visibility is propagated to all WebContent processes.
The other platforms will be addressed in a follow-up patch.

* Source/WebKit/UIProcess/ios/WKContentView.mm:
(-[WKContentView _setupVisibilityPropagationForWebProcess]):
(-[WKContentView _removeVisibilityPropagationViewForWebProcess]):

Canonical link: https://commits.webkit.org/307072@main