Source/WebKit/UIProcess/ios/WKContentView.mm
@@ -40,6 +40,7 @@
 #import "PrintInfo.h"
 #import "RemoteLayerTreeCommitBundle.h"
 #import "RemoteLayerTreeDrawingAreaProxyIOS.h"
+#import "RemotePageProxy.h"
 #import "SmartMagnificationController.h"
 #import "UIKitSPI.h"
 #import "UIKitUtilities.h"
@@ -358,8 +359,14 @@ typedef NS_ENUM(NSInteger, _WKPrintRenderingCallbackType) {
         return;
 
 #if USE(EXTENSIONKIT)
+    auto& mainFrameProcess = _page->siteIsolatedProcess();
     for (WKVisibilityPropagationView *visibilityPropagationView in _visibilityPropagationViews.get())
-        [visibilityPropagationView propagateVisibilityToProcess:_page->legacyMainFrameProcess()];
+        [visibilityPropagationView propagateVisibilityToProcess:mainFrameProcess];
+    auto remotePages = mainFrameProcess.remotePages();
+    for (auto& remotePage : remotePages) {
+        for (WKVisibilityPropagationView *visibilityPropagationView in _visibilityPropagationViews.get())
+            [visibilityPropagationView propagateVisibilityToProcess:remotePage->process()];
+    }
 #else
 
     auto processID = _page->legacyMainFrameProcess().processID();
@@ -436,8 +443,14 @@ typedef NS_ENUM(NSInteger, _WKPrintRenderingCallbackType) {
 {
 #if USE(EXTENSIONKIT)
     if (RefPtr page = _page.get()) {
+        auto& mainFrameProcess = _page->siteIsolatedProcess();
         for (WKVisibilityPropagationView *visibilityPropagationView in _visibilityPropagationViews.get())
-            [visibilityPropagationView stopPropagatingVisibilityToProcess:page->legacyMainFrameProcess()];
+            [visibilityPropagationView stopPropagatingVisibilityToProcess:mainFrameProcess];
+        auto remotePages = mainFrameProcess.remotePages();
+        for (auto& remotePage : remotePages) {
+            for (WKVisibilityPropagationView *visibilityPropagationView in _visibilityPropagationViews.get())
+                [visibilityPropagationView stopPropagatingVisibilityToProcess:remotePage->process()];
+        }
     }
 #endif
 
